# human-vs-orc

./: .gitignore  CREDITS.md  README.md
HumanVSOrc/: CMakeLists.txt  HumanVSOrc.cpp  HumanVSOrc.sln  HumanVSOrc.vcxproj  HumanVSOrc.vcxproj.filters
HumanVSOrc/TestProject/: CMakeLists.txt  TestAttributes.cpp  TestBonuses.cpp  TestCommand.cpp  TestEquipment.cpp  TestLifeSystem.cpp  TestProject.vcxproj  TestSkill.cpp  TestStatusEffect.cpp  TestUnit.cpp
HumanVSOrc/src/: Attribute.cpp  Attribute.h  AttributeGauge.cpp  AttributeGauge.h  AttributeType.h  Bonus.cpp  Bonus.h  BonusType.h  CMakeLists.txt  DependentAttribute.cpp  DependentAttribute.h  Equipment.cpp  Equipment.h  EquippableItem.cpp  EquippableItem.h  EquippableItemFactory.cpp  EquippableItemFactory.h  Game.cpp  Game.h  ITargetable.cpp  ITargetable.h  LifeComponent.cpp  LifeComponent.h  LifeSystem.cpp  LifeSystem.h  RandomGenerator.h  StatusEffect.cpp  StatusEffect.h  StatusEffectType.h  Unit.cpp  Unit.h  UnitFactory.cpp  UnitFactory.h  Weapon.cpp  Weapon.h  const.h  main.cpp
HumanVSOrc/src/Skill/: ApplyBonusToCasterCommand.cpp  ApplyBonusToCasterCommand.h  ApplyStatusEffectCommand.cpp  ApplyStatusEffectCommand.h  Command.cpp  Command.h  DealDamageCommand.cpp  DealDamageCommand.h  Skill.cpp  Skill.h  SkillFactory.cpp  SkillFactory.h  StatusEffect.cpp  StatusEffect.h
media/: class_diagram.dia  class_diagram.dia~
